@@ -14,24 +14,21 @@ endif()
 set(LIBICU_BASE_URL "http://orthanc.osimis.io/ThirdPartyDownloads")
 
 if (USE_LEGACY_LIBICU)
-  # This is the last version of icu that compiles with C++11
-  # support. It can be used for Linux Standard Base and Visual Studio 2008.
+  # This is the latest version of icu that compiles without C++11
+  # support. It is used for Linux Standard Base and Visual Studio 2008.
   set(LIBICU_URL "${LIBICU_BASE_URL}/icu4c-58_2-src.tgz")
   set(LIBICU_MD5 "fac212b32b7ec7ab007a12dff1f3aea1")
   set(LIBICU_DATA_VERSION "icudt58")
-  set(LIBICU_DATA_MD5 "ce2c7791ab637898553c121633155fb6")
-  set(LIBICU_DATA_WIN64_MD5 "8f7edfce3bff7edb0e5714cb66f891cb")
+  set(LIBICU_DATA_COMPRESSED_MD5 "a39b07b38195158c6c3070332cef2173")
+  set(LIBICU_DATA_UNCOMPRESSED_MD5 "54d2593cec5c6a4469373231658153ce")
 else()
   set(LIBICU_URL "${LIBICU_BASE_URL}/icu4c-63_1-src.tgz")
   set(LIBICU_MD5 "9e40f6055294284df958200e308bce50")
   set(LIBICU_DATA_VERSION "icudt63")
-  set(LIBICU_DATA_MD5 "92b5c73a1accd8ecf8c20c89bc6925a9")
-  set(LIBICU_DATA_WIN64_MD5 "edc00315f042c802547d8e4bd95b09f7")
+  set(LIBICU_DATA_COMPRESSED_MD5 "be495c0830de5f377fdfa8301a5faf3d")
+  set(LIBICU_DATA_UNCOMPRESSED_MD5 "99613c3f2ca9426c45dc554ad28cfb79")
 endif()
 
 set(LIBICU_SOURCES_DIR ${CMAKE_BINARY_DIR}/icu)
-set(LIBICU_DATA "${LIBICU_DATA_VERSION}${LIBICU_SUFFIX}_dat.c")
-set(LIBICU_DATA_URL "${LIBICU_BASE_URL}/${LIBICU_DATA}.gz")
-
-set(LIBICU_DATA_WIN64 "${LIBICU_DATA_VERSION}_dat-x86_64-mingw32.lib")
-set(LIBICU_DATA_WIN64_URL "${LIBICU_BASE_URL}/${LIBICU_DATA_WIN64}.gz")
+set(LIBICU_DATA "${LIBICU_DATA_VERSION}${LIBICU_SUFFIX}.dat.gz")
+set(LIBICU_DATA_URL "${LIBICU_BASE_URL}/${LIBICU_DATA}")
